--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+    useLibrary 'org.apache.http.legacy'
+    signingConfigs {}
+    buildTypes {}
 
     defaultConfig {
         applicationId "com.example.marcmenard.applivisiteur"
@@ -22,4 +25,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    //compile 'com.android.volley:volley:1.0.0'
+    //compile project(":volley2")
 }
